# bazaar

./: .gitmodules  CHANGELOG.md  CODESTYLE.md  CONTRIBUTING.md  Justfile  README-PL.md  README.md  TRANSLATORS-FR.md  TRANSLATORS-PL.md  TRANSLATORS-ZH-CN.md  TRANSLATORS.md  bazaar.doap  bazaar.mo  funding.json  meson.build  meson_options.txt  translators.sh  version.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml
.well-known/: funding-manifest-urls
bge/: README.md  bge-animation-private.h  bge-animation.c  bge-animation.h  bge-carousel.c  bge-carousel.h  bge-markdown-render.c  bge-markdown-render.h  bge-marshalers.list  bge-version-macros.h  bge-version.h.in  bge.h  libbge.c  meson.build  util.h
bge/demo/: demo.c  demo.gresource.xml  meson.build  style.css  test.wdgt  window.blp
data/: io.github.kolunmi.Bazaar.desktop.in  io.github.kolunmi.Bazaar.gschema.xml  io.github.kolunmi.Bazaar.metainfo.xml.in  io.github.kolunmi.Bazaar.service.in
data/icons/: meson.build
docs/: debugging.md  overview.md  overview.org
po/: LINGUAS  POTFILES.in  ar.po  bazaar.pot  be.po  bg.po  bs.po  cs.po  de.po  el.po  es.po  eu.po  fa_IR.po  fr.po  ga.po  hu.po  id.po  it.po  ja.po  kw.po  nl.po  pl.po  pt-BR.po  pt.po  pt_BR.po  pt_BR.po~  pt_PT.po  ru.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
scripts/: countries.json.in  countries.py
src/: bazaar.gresource.xml  blocklist-schema.xml  bz-addon-tile.blp  bz-addon-tile.c  bz-addon-tile.h  bz-addons-dialog.blp  bz-addons-dialog.c  bz-addons-dialog.h  bz-age-rating-attribute.txt  bz-animation.c  (+370 more)
(+39 files in other folders)
